# LIP

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  scip-import.yml
bindings/dart/: pubspec.yaml
bindings/dart/lib/: lip.dart
bindings/dart/lib/src/: client.dart  enums.dart  schema.dart  types.dart
bindings/rust/: Cargo.toml  README.md  build.rs
bindings/rust/benches/: framing.rs  journal.rs  query_graph.rs  tier1_indexer.rs
bindings/rust/src/: lib.rs
bindings/rust/src/bridge/: lsp_server.rs  mod.rs  translate.rs
bindings/rust/src/daemon/: embedding.rs  journal.rs  manifest.rs  mmap.rs  mod.rs  server.rs  session.rs  tier2_manager.rs  watcher.rs
bindings/rust/src/indexer/: language.rs  mod.rs  symbol_extractor.rs  tier1.rs
bindings/rust/src/indexer/tier2/: clangd.rs  dart_ls.rs  enrich.rs  gopls.rs  kotlin.rs  lsp_client.rs  mod.rs  py_ls.rs  rust_analyzer.rs  swift_ls.rs  ts_server.rs
bindings/rust/src/query_graph/: db.rs  mod.rs  module_id.rs  types.rs
bindings/rust/src/registry/: cache.rs  client.rs  mod.rs
bindings/rust/src/schema/: mod.rs  signature.rs  types.rs  visibility.rs
bindings/rust/tests/: integration.rs
docs/: LIP_SPEC.mdx  LIP_SPEC_v02.mdx  LIP_SPEC_v03_final.md
docs/user/: cli-reference.md  comparisons.md  daemon.md  getting-started.md  mcp-integration.md  registry.md
schema/: lip.fbs
spec/: symbol-uri.md
tools/lip-cli/: Cargo.toml  README.md  build.rs
tools/lip-cli/src/: main.rs  output.rs
tools/lip-cli/src/cmd/: annotate.rs  daemon.rs  export.rs  fetch.rs  import.rs  index.rs  lsp.rs  mcp.rs  mod.rs  push.rs  query.rs  slice.rs  stream_context.rs
tools/lip-cli/src/proto/: scip.proto
tools/lip-registry/: Cargo.toml  Dockerfile  README.md
tools/lip-registry/src/: main.rs
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
website/src/: version.ts
website/src/components/: Badge.astro  Callout.astro
website/src/layouts/: DocsLayout.astro  Layout.astro
website/src/pages/: index.astro
website/src/pages/docs/: advanced.mdx  cli-reference.mdx  comparisons.mdx  daemon.mdx  embeddings.mdx  getting-started.mdx  glossary.mdx  index.astro  index.mdx  mcp.mdx  registry.mdx  spec.mdx  troubleshooting.mdx
