[workspace]
resolver = "2"
members  = [
    "bindings/rust",
    "tools/lip-cli",
    "tools/lip-registry",
]

[workspace.package]
version    = "2.1.0"
edition    = "2021"
authors    = ["Lisa Welsch <lisa@tastehub.io>"]
license    = "MIT"
repository = "https://github.com/nyxCore-Systems/LIP"
homepage   = "https://lisawelsch.com"
