[workspace]
resolver = "2"
members  = [
    "bindings/rust",
    "tools/lip-cli",
    "tools/lip-registry",
]

[workspace.package]
version       = "2.3.5"
edition       = "2021"
rust-version  = "1.78"
authors       = ["Lisa Welsch <lisa@nyxcore.cloud>"]
license       = "MIT"
repository    = "https://github.com/nyxCore-Systems/LIP"
homepage      = "https://lip-sigma.vercel.app"
documentation = "https://lip-sigma.vercel.app/docs"
