[package]
name        = "lip"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
repository.workspace = true
homepage.workspace  = true
description = "LIP — Linked Incremental Protocol: persistent live code intelligence graph"
keywords    = ["code-intelligence", "lsp", "tree-sitter", "incremental", "mcp"]
categories  = ["development-tools", "parser-implementations"]

[dependencies]
# Tree-sitter (Tier 1 indexer)
tree-sitter            = "0.22"
tree-sitter-rust       = "0.21"
tree-sitter-python     = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-dart       = "0.0.4"
# LSP bridge — use tower-lsp's bundled lsp-types to avoid version conflicts
tower-lsp  = "0.20"
# Async
tokio      = { version = "1", features = ["full"] }
# IPC
memmap2    = "0.9"
# Registry client
reqwest    = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Utilities
sha2       = "0.10"
hex        = "0.4"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
thiserror  = "1"
dashmap    = "5"
notify     = "6"
parking_lot = "0.12"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Parent-process watchdog for --managed daemon mode (Unix only).
libc       = "0.2"

[dev-dependencies]
criterion  = { version = "0.5", features = ["async_tokio"] }
tempfile   = "3"

[[bench]]
name    = "tier1_indexer"
harness = false

[[bench]]
name    = "query_graph"
harness = false

[[bench]]
name    = "framing"
harness = false

[[bench]]
name    = "journal"
harness = false

[build-dependencies]
which = "6"
