[package]
name        = "lip-cli"
version     = "0.4.0"
edition     = "2021"
license     = "Apache-2.0"
description = "LIP — Linked Incremental Protocol: CLI tool"

[[bin]]
name = "lip"
path = "src/main.rs"

[dependencies]
lip        = { path = "../../bindings/rust" }
clap       = { version = "4", features = ["derive", "env"] }
tokio      = { version = "1", features = ["full"] }
tower-lsp  = "0.20"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
prost      = "0.12"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir    = "2"

[build-dependencies]
prost-build         = "0.12"
protoc-bin-vendored = "3"
