[package]
name        = "lip-cli"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
repository.workspace = true
homepage.workspace  = true
description = "LIP — Linked Incremental Protocol: CLI tool"
keywords    = ["code-intelligence", "cli", "lsp", "mcp", "developer-tools"]
categories  = ["development-tools", "command-line-utilities"]

[[bin]]
name = "lip"
path = "src/main.rs"

[dependencies]
lip        = { path = "../../bindings/rust" }
clap       = { version = "4", features = ["derive", "env"] }
tokio      = { version = "1", features = ["full"] }
tower-lsp  = "0.20"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
prost      = "0.12"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir    = "2"

[build-dependencies]
prost-build         = "0.12"
protoc-bin-vendored = "3"
