[package]
name          = "lip-cli"
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
authors.workspace       = true
license.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
description   = "LIP — persistent, incremental code intelligence daemon. Blast-radius indexing, MCP server, LSP bridge, and semantic search in one binary."
keywords      = ["code-intelligence", "cli", "lsp", "mcp", "developer-tools"]
categories    = ["development-tools", "command-line-utilities"]
readme        = "README.md"

[[bin]]
name = "lip"
path = "src/main.rs"

[dependencies]
lip        = { package = "lip-core", path = "../../bindings/rust", version = "2.1.0" }
clap       = { version = "4", features = ["derive", "env"] }
tokio      = { version = "1", features = ["full"] }
tower-lsp  = "0.20"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
prost      = "0.12"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir    = "2"

[build-dependencies]
prost-build         = "0.12"
protoc-bin-vendored = "3"
