[package]
name        = "lip-registry"
version     = "1.1.0"
edition     = "2021"
license     = "Apache-2.0"
description = "LIP registry server — serves pre-built dependency slices over HTTPS"

[[bin]]
name = "lip-registry"
path = "src/main.rs"

[dependencies]
lip        = { path = "../../bindings/rust" }
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
sha2       = "0.10"
hex        = "0.4"
