[package]
name        = "lip-registry"
version.workspace   = true
edition.workspace   = true
authors.workspace   = true
license.workspace   = true
repository.workspace = true
homepage.workspace  = true
description = "LIP registry server — serves pre-built dependency slices over HTTPS"
keywords    = ["code-intelligence", "registry", "dependencies", "mcp"]
categories  = ["development-tools", "web-programming::http-server"]

[[bin]]
name = "lip-registry"
path = "src/main.rs"

[dependencies]
lip        = { package = "lip-core", path = "../../bindings/rust", version = "2.0.0" }
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
sha2       = "0.10"
hex        = "0.4"
